<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResultWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_details"
            android:textSize="30sp"
            android:textAlignment="center"
            android:padding="20dp"
            android:textColor="@color/black"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_number"
                android:textColor="@color/black"
                android:alpha="0.7">

            </TextView>

            <EditText
                android:id="@+id/scan_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:alpha="0.7">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:textColor="@color/black"
                android:alpha="0.7">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/violation"
                android:textColor="@color/black"
                android:alpha="0.7">

            </TextView>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#B30000"
                android:entries="@array/array_name"
                android:backgroundTint="@color/black"
                android:padding="8dp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_again"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>